app/app.styl
$green = #009A93
$yellow = #F9D510

.wrapper
  font-family "儷黑 Pro", "sans-serif", "LiHei Pro", "微軟正黑體", "新細明體";
  padding-top 39px

.container
  padding 16vh

.container-top
  padding 2vh

.full-screen
  height 100%
  width 100%

.our-centered
  text-align: center

.img-bg
  color: #fff
  font-weight: bold 
  background-image url(res/cover.svg)
  -webkit-background-size cover
  -moz-background-size cover
  -o-background-size cover

.title-line
  margin 3vh 0

.vh10
  font-size: 10vh
.vh6
  font-size: 6vh
.vh5
  font-size: 5vh
.vh4
  font-size: 4vh
.vh3
  font-size: 3vh
.vh2
  font-size: 2vh
.vh1
  font-size: 1vh

.sample-img
  width 100%

#header
  -webkit-border-radius 0px
  -moz-border-radius 0px
  border-radius 0px
  background-color $green

